--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,67 +2,67 @@
     "name": "AB Portfolio",
     "short_name": "Portfolio d'Alexandre BECAVIN",
     "icons": [{
-        "src": "./img/logo/android-chrome-192x192.png",
+        "src": "./img/logo/android-chrome-192x192.webp",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/android-chrome-512x512.png",
+        "src": "./img/logo/android-chrome-512x512.webp",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/apple-touch-icon-60x60.png",
+        "src": "./img/logo/apple-touch-icon-60x60.webp",
         "sizes": "60x60",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/apple-touch-icon-76x76.png",
+        "src": "./img/icon/apple-touch-icon-76x76.webp",
         "sizes": "76x76",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/apple-touch-icon-120x120.png",
+        "src": "./img/logo/apple-touch-icon-120x120.webp",
         "sizes": "120x120",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/apple-touch-icon-152x152.png",
+        "src": "./img/logo/apple-touch-icon-152x152.webp",
         "sizes": "152x152",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/apple-touch-icon-180x180.png",
+        "src": "./img/logo/apple-touch-icon-180x180.webp",
         "sizes": "180x180",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/apple-touch-icon.png",
+        "src": "./img/logo/apple-touch-icon.webp",
         "sizes": "180x180",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/favicon-16x16.png",
+        "src": "./img/logo/favicon-16x16.webp",
         "sizes": "16x16",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/favicon-32x32.png",
+        "src": "./img/logo/favicon-32x32.webp",
         "sizes": "32x32",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/msapplication-icon-144x144.png",
+        "src": "./img/logo/msapplication-icon-144x144.webp",
         "sizes": "144x144",
-        "type": "image/png"
+        "type": "image/webp"
       },
       {
-        "src": "./img/icon/mstile-150x150.png",
+        "src": "./img/logo/mstile-150x150.webp",
         "sizes": "150x150",
-        "type": "image/png"
+        "type": "image/webp"
       }
     ],
-    "start_url": "https://alexandrebecavin.netlify.app/",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#210499"
