--- a/public/manifest.json
+++ b/public/manifest.json
@@ -62,7 +62,7 @@
         "type": "image/webp"
       }
     ],
-    "start_url": ".",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#000"
